<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/peluqueria">

    <ImageView
        android:id="@+id/img_registrarse"
        android:layout_width="151dp"
        android:layout_height="112dp"
        android:layout_marginTop="20dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cambioimagen" />

    <EditText
        android:id="@+id/edt_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableStart="@android:drawable/ic_menu_view"
        android:ems="10"
        android:hint="@string/nombre_s"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/img_registrarse"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/img_registrarse"
        app:layout_constraintTop_toBottomOf="@+id/img_registrarse"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/edt_apellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:drawableStart="@android:drawable/ic_menu_myplaces"
        android:ems="10"
        android:hint="@string/apellidos_s"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/edt_nombre"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edt_nombre"
        app:layout_constraintTop_toBottomOf="@+id/edt_nombre"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/edt_telefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:drawableStart="@android:drawable/ic_menu_call"
        android:ems="10"
        android:hint="@string/telefono"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/edt_edad"
        app:layout_constraintStart_toStartOf="@+id/edt_edad"
        app:layout_constraintTop_toBottomOf="@+id/edt_edad"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/edt_correo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:drawableStart="@android:drawable/sym_action_email"
        android:ems="10"
        android:hint="@string/correo_electronico"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/edt_telefono"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edt_telefono"
        app:layout_constraintTop_toBottomOf="@+id/edt_telefono"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/edt_clave1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:drawableStart="@android:drawable/ic_lock_idle_lock"
        android:ems="10"
        android:hint="@string/contrase_a"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/edt_correo1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edt_correo1"
        app:layout_constraintTop_toBottomOf="@+id/edt_correo1"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <Button
        android:id="@+id/bt_registrarse"
        android:layout_width="135dp"
        android:layout_height="49dp"
        android:layout_marginBottom="28dp"
        android:onClick="insertar_cliente"
        android:text="@string/registrarse"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/bt_cambiar_imagen"
        app:layout_constraintHorizontal_bias="0.692"
        app:layout_constraintStart_toStartOf="@+id/bt_cambiar_imagen"
        app:layout_constraintTop_toBottomOf="@+id/bt_cambiar_imagen"
        app:layout_constraintVertical_bias="0.38" />

    <Button
        android:id="@+id/bt_cambiar_imagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="CAMBIAR  IMAGEN"
        android:onClick="cambiar_imagen"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/edt_clave1"
        app:layout_constraintStart_toStartOf="@+id/edt_clave1"
        app:layout_constraintTop_toBottomOf="@+id/edt_clave1" />

    <EditText
        android:id="@+id/edt_edad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:drawableStart="@android:drawable/ic_menu_today"
        android:ems="10"
        android:hint="Edad"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/edt_apellidos"
        app:layout_constraintStart_toStartOf="@+id/edt_apellidos"
        app:layout_constraintTop_toBottomOf="@+id/edt_apellidos" />

</androidx.constraintlayout.widget.ConstraintLayout>